--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,27 @@ description = "Canary service to test availability of Grafana"
 authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
 license = "Apache 2.0"
 readme = "README.md"
-packages = [{include = "aws_canary_telemetry_grafana"}]
+
+[[tool.poetry.source]]
+name = "artifactory"
+url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
-cruft = "^2.11.1"
+aws-lambda-powertools = "^2.0.0"
+bandit = "^1.7.4"
+black = "^22.10.0"
 cookiecutter = "^2.1.1"
+cruft = "^2.11.1"
+flake8 = "^5.0.4"
+pre-commit = "^2.20.0"
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+safety = "^2.3.1"
 toml = "^0.10.2"
+version-incrementor = "^1.5.0"
 
 [build-system]
 requires = ["poetry-core"]
