--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-cov = "^4.0.0"
 safety = "^2.3.1"
 toml = "^0.10.2"
 version-incrementor = "^1.5.0"
+wheel = "*"
 
 [build-system]
 requires = ["poetry-core"]
