--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,16 @@ url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+aws-lambda-powertools = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
-aws-lambda-powertools = "^2.0.0"
-bandit = "^1.7.4"
-black = "^22.10.0"
-cookiecutter = "^2.1.1"
-cruft = "^2.11.1"
-flake8 = "^5.0.4"
-pre-commit = "^2.20.0"
-pytest = "^7.2.0"
-pytest-cov = "^4.0.0"
-toml = "^0.10.2"
+bandit = "*"
+black = "*"
+flake8 = "*"
+pre-commit = "*"
+pytest = "*"
+pytest-cov = "*"
+toml = "*"
 version-incrementor = "^1.5.0"
 wheel = "*"
 
