--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ pytest-cov = "*"
 toml = "*"
 version-incrementor = "^1.5.0"
 wheel = "*"
+cookiecutter = "*"
+cruft = "*"
 
 [build-system]
 requires = ["poetry-core"]
